<resources>
    <string name="app_name">BMMO</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="log_out">log out</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="workout">Exercise</string>
    <string name="quiz">Quiz</string>
    <string name="register">register</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
</resources>